package com.company;

public interface Trabajo {
    public String construir();
}
