@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Arquitecto {
        - matricula : int
        + Arquitecto()
        + crearPlanos()
        + getMatricula()
        + setMatricula()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Comercial {
        - nombreObra : String
        + Comercial()
        + getNombreObra()
        + setNombreObra()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Comercio {
        - rubro : String
        + Comercio()
        + getRubro()
        + setRubro()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Domestica {
        - habitaciones : int
        + Domestica()
        + getHabitaciones()
        + setHabitaciones()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Empleado {
        - costo : int
        - dni : int
        - nombre : String
        - tel : int
        + Empleado()
        + Empleado()
        + getCosto()
        + getDni()
        + getNombre()
        + getTel()
        + setCosto()
        + setDni()
        + setNombre()
        + setTel()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Empresa {
        ~ empleados : ArrayList<Empleado>
        ~ obras : ArrayList<Obra>
        - nombre : String
        + Empresa()
        + getNombre()
        + setNombre()
        + verEmpleados()
        + verObras()
    }
  }
  

  namespace com.company {
    class com.company.Hotel {
        - pisos : int
        + Hotel()
        + getPisos()
        + setPisos()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Maestro {
        - edad : int
        + Maestro()
        + construir()
        + getEdad()
        + setEdad()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Obra {
        ~ empleados : ArrayList<Empleado>
        - costo : float
        - direccion : String
        - metrosCuadrados : float
        - tiempo : float
        + Obra()
        + calcularCosto()
        + getCosto()
        + getDireccion()
        + getMetrosCuadrados()
        + getTiempo()
        + mostrarEmpleados()
        + setCosto()
        + setDireccion()
        + setMetrosCuadrados()
        + setTiempo()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Obrero {
        - edad : int
        + Obrero()
        + construir()
        + getEdad()
        + setEdad()
        + toString()
    }
  }
  

  namespace com.company {
    interface com.company.Trabajo {
        {abstract} + construir()
    }
  }
  

  com.company.Arquitecto -up-|> com.company.Empleado
  com.company.Comercial -up-|> com.company.Obra
  com.company.Comercio -up-|> com.company.Comercial
  com.company.Domestica -up-|> com.company.Obra
  com.company.Hotel -up-|> com.company.Comercial
  com.company.Maestro .up.|> com.company.Trabajo
  com.company.Maestro -up-|> com.company.Empleado
  com.company.Obra -up-|> com.company.Empresa
  com.company.Obrero .up.|> com.company.Trabajo
  com.company.Obrero -up-|> com.company.Empleado


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
